added cities and counties

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -279,6 +279,7 @@
     "city": "City",
     "selectCity": "-- Select city --",
     "state": "State",
+    "selectCounty": "-- Select county --",
     "phone": "Contact phone number",
     "billingAddress": "Billing address"
   },
