Added various new translations for error messges handling Get site Whatsapp support number from API configurations or fall back to ProjectVariables Reverted to price display on BundleCard & BundleDetail as when currency changes it is automatically converted Getting fee/vat and currency from API now on assign/assigntopup functions. This also allows to present customers with billing info in Romania the prices in RON by default on checkout Modified billing info counties to adhere to ISO-3166-RO-CODES as well as ANAF e-factura schema Added validation for billing info on TmpLogin Billing info is retreived from API on TmpLogin if user is at least tempAuthenticated and saved to API Modified currencyReducer to get currency from API or fall back to ProjectVariables

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,7 +3,8 @@
     "hooray": "Hooray!",
     "notAvailable": "N/A",
     "pageNotFound": "Page Not Found",
-    "pageNotExistMessage": "Sorry, the page you are looking for doesn't exist."
+    "pageNotExistMessage": "Sorry, the page you are looking for doesn't exist.",
+    "loading": "Loading..."
   },
   "account": {
     "delete_account": "Delete Account",
@@ -252,6 +253,11 @@
   "checkout": {
     "aliasEmailNotAllowed": "Alias emails (with '+') are not allowed",
     "confirmationRequired": "Confirmation is required",
+    "companyNameRequired": "Company Name is required!",
+    "vatCodeRequired": "VAT code is required!",
+    "countryRequired": "Country is required!",
+    "cityRequired": "City is a required field!",
+    "stateRequired": "State is a required field!",
     "emailRequired": "Email is a required field!",
     "failedToSendMessage": "Failed to send message",
     "goBack": "Go Back",
@@ -270,6 +276,7 @@
     "billingInformation": "Billing information",
     "billingType": "Billing type",
     "individual": "Individual",
+    "invalidEmail": "Invalid email",
     "business": "Business",
     "companyName": "Company name",
     "vatCode": "VAT code",
