Reverted to original currency to be displayed in checkout summary Added extra 2 lines in checkout summary to display price to be paid in local currency and exchange rate information The above 2 only apply to orders with different display and original currency

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -259,6 +259,8 @@
     "cityRequired": "City is a required field!",
     "stateRequired": "State is a required field!",
     "emailRequired": "Email is a required field!",
+    "totalToBePaidIn": "Total to be paid in {{currency}}",
+    "exchangeRate": "Exchange rate",
     "failedToSendMessage": "Failed to send message",
     "goBack": "Go Back",
     "email": "Email",
