Updated order history to read data from API not calculate in frontend Added invoice download functionality on order receipt

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -69,7 +69,8 @@
     "payNow": "Pay Now",
     "cancel": "Cancel",
     "savingChanges": "Saving Changes...",
-    "saveChanges": "Save Changes"
+    "saveChanges": "Save Changes",
+    "downloadInvoice": "Download Invoice"
   },
   "orders": {
     "plan_history": "Plan History",
