Added promocode functionality to checkout page and payment flow. -- Updated translation files for new promo code messages -- Modified BillingFormView to update button text during submission -- Updated PaymentFlow to include promo code in API request -- Promocode is only applicable for new purchases, not top-ups

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -302,7 +302,12 @@
     "phone": "Contact phone number",
     "billingAddress": "Billing address",
     "authenticationRequired": "Authentication required",
-    "redirectingToAuth": "Redirecting to authentication..."
+    "redirectingToAuth": "Redirecting to authentication...",
+    "promoCode": "Have a promo code?",
+    "enterPromoCode": "Enter code",
+    "apply": "Apply",
+    "invalidPromoCode": "Invalid promo code",
+    "promoCodeApplied": "Promo code applied successfully!"
   },
   "howItWorks": {
     "easyAndFast": "Easy and fast",
