feat: add update banner and fix well-known config
Added an update banner component to notify users of new versions. Also fixed the configuration for .well-known files to ensure correct content type and CORS headers.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -378,6 +378,10 @@
   "cookiePolicy": {
     "failedToLoadCookiePolicyData": "Failed to load Cookie Policy Data"
   },
+  "update": {
+    "updateAvailable": "Page update available",
+    "refresh": "Refresh"
+  },
 
   "errors": {
     "maxCharacter": "{{field}} must not contain more than {{character}} characters",
